--- a/painogen/about/scss/style.css
+++ b/painogen/about/scss/style.css
@@ -46,6 +46,10 @@ body {
   body ul li {
     list-style: none; }
 
+@media only screen and (max-width: 1300px) {
+  .container {
+    max-width: 920px; } }
+
 /*the class for img responsiv*/
 .aac {
   width: 150%; }
@@ -57,20 +61,33 @@ body {
       width: 100%; } }
 
 /*The class vor text_header_name_block*/
+@media only screen and (max-width: 767px) {
+  .text_header_name_block {
+    padding-left: 15px; } }
+@media only screen and (max-width: 450px) {
+  .text_header_name_block {
+    padding-left: 11px; } }
 .text_header_name_block h2 {
   font-family: "poppinsRegular";
   font-size: 24px;
   color: #262a2c;
   letter-spacing: 2px; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 1300px) {
     .text_header_name_block h2 {
       font-size: 20px; } }
+  @media only screen and (max-width: 600px) {
+    .text_header_name_block h2 {
+      font-size: 16px; } }
 .text_header_name_block .underLine_for_tex {
   margin-top: 28px;
   width: 80px;
   height: 2px;
   background-color: #2b9100;
   margin-bottom: 30px; }
+  @media only screen and (max-width: 600px) {
+    .text_header_name_block .underLine_for_tex {
+      margin-top: 18px;
+      margin-bottom: 20px; } }
 
 .text_main_content p {
   font-family: "poppinsRegular";
@@ -78,6 +95,10 @@ body {
   color: #626262;
   line-height: 40px;
   letter-spacing: 0.60px; }
+  @media only screen and (max-width: 1300px) {
+    .text_main_content p {
+      font-size: 15px;
+      line-height: 25px; } }
   @media only screen and (max-width: 768px) {
     .text_main_content p {
       font-size: 16px;
@@ -86,6 +107,9 @@ body {
     .text_main_content p {
       margin-left: 3%;
       margin-right: 3%; } }
+  @media only screen and (max-width: 768px) {
+    .text_main_content p {
+      font-size: 12px; } }
 
 /*class for parallax off*/
 @media only screen and (max-width: 768px) {
@@ -159,16 +183,34 @@ body {
   -o-transform: rotate(-135deg);
   transform: rotate(-135deg); }
 
+.nav-icon_1 {
+  position: relative;
+  right: -2%; }
+
 /*my styles head*/
 header {
-  border-bottom: solid 1px #c8c8c8; }
-  header nav {
-    background: #fafafa; }
+  border-bottom: solid 1px #c8c8c8;
+  background: #fafafa;
+  position: absolute;
+  width: 100%;
+  z-index: 20;
+  top: 0; }
 
 #headNav {
-  padding-bottom: 34px;
-  padding-top: 28px;
-  transition: all 1s linear; }
+  padding-bottom: 25px;
+  padding-top: 25px;
+  transition: opacity 1s; }
+  @media only screen and (max-width: 991px) {
+    #headNav {
+      padding-top: 10px;
+      padding-bottom: 10px; } }
+
+.positionFix {
+  padding-left: 32px;
+  margin-left: -15px;
+  width: 100%;
+  position: fixed;
+  z-index: 99999; }
 
 #headMenu {
   margin-left: 3%;
@@ -189,9 +231,9 @@ header {
     color: #2b9100; }
 
 #navbarNav_2 {
-  width: 261px;
+  width: 186px;
   position: absolute;
-  right: 5%; }
+  right: -2px; }
   @media only screen and (max-width: 991px) {
     #navbarNav_2 {
       position: inherit; } }
@@ -285,6 +327,9 @@ header {
   #parralax_1 img:nth-child(2) {
     left: 6%;
     top: 71px; }
+    @media only screen and (max-width: 1300px) {
+      #parralax_1 img:nth-child(2) {
+        width: 11%; } }
 
 .top_slid_text_content {
   animation: animationFramesW linear 1s;
@@ -319,6 +364,15 @@ header {
 /*..............section_2.............*/
 #section_2 {
   margin-top: 400px; }
+  @media only screen and (max-width: 1200px) {
+    #section_2 {
+      margin-top: 300px; } }
+  @media only screen and (max-width: 767px) {
+    #section_2 {
+      max-width: 420px; } }
+  @media only screen and (max-width: 450px) {
+    #section_2 {
+      max-width: 300px; } }
 
 /*.............Section 3................*/
 #section_3 {
@@ -326,11 +380,23 @@ header {
   @media only screen and (max-width: 768px) {
     #section_3 .row > div {
       margin-bottom: 70px; } }
+  @media only screen and (max-width: 767px) {
+    #section_3 {
+      width: 450px; } }
+  @media only screen and (max-width: 450px) {
+    #section_3 {
+      width: 300px;
+      padding: 0; } }
   @media only screen and (max-width: 576px) {
     #section_3 .row > div {
       margin-bottom: 70px;
       margin-left: 3%;
       margin-right: 3%; } }
+  @media only screen and (max-width: 576px) and (max-width: 450px) {
+    #section_3 .row > div {
+      margin-left: 0%;
+      margin-right: 0%; } }
+
   #section_3 .text_main_content_1 p:nth-child(2) {
     margin-top: 60px; }
   #section_3 .section3_text_header_name_block img {
@@ -344,6 +410,25 @@ header {
     font-size: 22px;
     color: #ffffff;
     margin-top: 16px; }
+    @media only screen and (max-width: 767px) {
+      #section_3 #BTN_section_3 {
+        width: 6rem;
+        height: 41px;
+        font-size: 16px;
+        margin-left: 15px; } }
+
+#our_vision_underLine_for_text_1 {
+  margin-top: 36px; }
+
+#our_vision_underLine_for_text_3 {
+  margin-top: 33px; }
+
+@media only screen and (max-width: 1300px) {
+  #title_our_vision_1, #title_our_vision_2, #title_our_vision_3 {
+    font-size: 16px; } }
+@media only screen and (max-width: 992px) {
+  #title_our_vision_1, #title_our_vision_2, #title_our_vision_3 {
+    font-size: 13px; } }
 
 /*...............Parallax 2.........*/
 #parallax_2 {
@@ -353,7 +438,8 @@ header {
     margin-top: -40px; }
     @media only screen and (max-width: 1300px) {
       #parallax_2 img {
-        margin-left: 74%; } }
+        margin-left: 74%;
+        width: 10%; } }
 
 /*.............. Section 4................*/
 #section_4 {
@@ -372,12 +458,25 @@ header {
     font-size: 22px;
     color: #ffffff;
     margin-top: 16px; }
+    @media only screen and (max-width: 767px) {
+      #section_4 #BTN_section_4 {
+        width: 6rem;
+        height: 41px;
+        font-size: 16px;
+        margin-left: 15px; } }
   @media only screen and (max-width: 768px) {
     #section_4 img {
       margin-top: 70px; } }
   @media only screen and (max-width: 768px) {
     #section_4 {
       margin-top: 70px; } }
+  @media only screen and (max-width: 767px) {
+    #section_4 {
+      max-width: 420px;
+      padding: 0; } }
+  @media only screen and (max-width: 450px) {
+    #section_4 {
+      max-width: 300px; } }
 
 /*............Parallax 3 .................*/
 #parallax_3 {
@@ -388,16 +487,26 @@ header {
   #parallax_3 img:nth-child(1) {
     left: 0%;
     top: 60px; }
+    @media only screen and (max-width: 1300px) {
+      #parallax_3 img:nth-child(1) {
+        width: 10%; } }
   #parallax_3 img:nth-child(2) {
     right: -4%;
     top: 88px; }
     @media only screen and (max-width: 1300px) {
       #parallax_3 img:nth-child(2) {
-        right: 14%; } }
+        right: 14%;
+        width: 10%; } }
 
 /*...............section 5...............*/
 #section_5 {
   margin-top: 232px; }
+  @media only screen and (max-width: 767px) {
+    #section_5 {
+      max-width: 420px; } }
+  @media only screen and (max-width: 450px) {
+    #section_5 {
+      max-width: 300px; } }
   #section_5 .section5_text_header_name_block {
     width: 100%;
     padding-top: 22px; }
@@ -418,6 +527,9 @@ header {
   width: 98%;
   margin: 0 auto;
   margin-top: 70px; }
+  @media only screen and (max-width: 676px) {
+    #slider_section_5 {
+      margin-top: 30px; } }
 
 .sliderItemBlock {
   grid-template-columns: 1fr 1fr 1fr;
@@ -432,10 +544,10 @@ header {
     @media only screen and (max-width: 1600px) {
       .sliderItemBlock div h2 {
         font-size: 20px; } }
-    @media only screen and (max-width: 576px) {
+    @media only screen and (max-width: 767px) {
       .sliderItemBlock div h2 {
         margin-top: 20px;
-        font-size: 16px; } }
+        font-size: 14px; } }
     @media only screen and (max-width: 460px) {
       .sliderItemBlock div h2 {
         font-size: 14px; } }
@@ -448,9 +560,9 @@ header {
     @media only screen and (max-width: 1600px) {
       .sliderItemBlock div p {
         font-size: 13px; } }
-    @media only screen and (max-width: 576px) {
+    @media only screen and (max-width: 767px) {
       .sliderItemBlock div p {
-        font-size: 11px; } }
+        font-size: 9px; } }
 
 .sliderBTN {
   border-radius: 50%;
@@ -463,9 +575,10 @@ header {
   @media only screen and (max-width: 1450px) {
     .sliderBTN {
       width: 60px; } }
-  @media only screen and (max-width: 576px) {
+  @media only screen and (max-width: 767px) {
     .sliderBTN {
-      width: 30px; } }
+      width: 30px;
+      top: 20%; } }
 
 .sliderBTN:hover {
   box-shadow: 0px 0px 22px 0px #625e5e; }
@@ -487,24 +600,33 @@ header {
   background: #2b9100;
   padding-top: 40px;
   padding-bottom: 50px;
-  margin-top: 170px; }
+  margin-top: 70px; }
+  @media only screen and (max-width: 767px) {
+    #subscribe_section {
+      padding-bottom: 70px; } }
 
 #subscribe_section > div {
   max-width: 1140px;
   margin: 0 auto;
-  grid-template-columns: 521px auto; }
-  @media only screen and (max-width: 1211px) {
+  grid-template-columns: 521px auto;
+  /*@media only screen and (max-width: 1200px) {
+     padding-bottom: 100px;
+  }*/ }
+  @media only screen and (max-width: 1650px) {
     #subscribe_section > div {
-      max-width: 505px; } }
-  @media only screen and (max-width: 1200px) {
+      width: 1094px; } }
+  @media only screen and (max-width: 1300px) {
     #subscribe_section > div {
-      padding-bottom: 100px; } }
-  @media only screen and (max-width: 520px) {
+      width: 937px; } }
+  @media only screen and (max-width: 1190px) {
     #subscribe_section > div {
-      max-width: 400px; } }
-  @media only screen and (max-width: 450px) {
+      width: 715px; } }
+  @media only screen and (max-width: 767px) {
     #subscribe_section > div {
-      max-width: 277px; } }
+      width: 400px; } }
+  @media only screen and (max-width: 420px) {
+    #subscribe_section > div {
+      max-width: 250px; } }
   @media only screen and (max-width: 1440px) {
     #subscribe_section > div {
       grid-template-columns: 524px auto; } }
@@ -512,6 +634,12 @@ header {
     #subscribe_section > div {
       grid-template-columns: auto;
       grid-row-gap: 40px; } }
+  @media only screen and (max-width: 1300px) {
+    #subscribe_section > div {
+      grid-template-columns: auto auto; } }
+  @media only screen and (max-width: 767px) {
+    #subscribe_section > div {
+      grid-template-columns: auto; } }
   #subscribe_section > div h2 {
     font-family: "poppinsRegular";
     font-size: 21px;
@@ -519,15 +647,25 @@ header {
     margin-bottom: 27px;
     font-weight: 100;
     letter-spacing: 2px; }
-    @media only screen and (max-width: 1440px) {
+    @media only screen and (max-width: 1650px) {
       #subscribe_section > div h2 {
-        font-size: 17px; } }
+        font-size: 19px; } }
+    @media only screen and (max-width: 1300px) {
+      #subscribe_section > div h2 {
+        font-size: 18px; } }
+    @media only screen and (max-width: 1190px) {
+      #subscribe_section > div h2 {
+        font-size: 12px; } }
+    @media only screen and (max-width: 767px) {
+      #subscribe_section > div h2 {
+        text-align: left;
+        font-size: 10.6px; } }
   #subscribe_section > div .socIcons {
     grid-template-columns: 30px 30px 30px 30px 30px 30px;
     grid-column-gap: 5%; }
-    @media only screen and (max-width: 1440px) {
+    @media only screen and (max-width: 1300px) {
       #subscribe_section > div .socIcons {
-        grid-column-gap: 5%; } }
+        grid-column-gap: 3%; } }
     #subscribe_section > div .socIcons a {
       display: block;
       font-size: 25px;
@@ -536,6 +674,15 @@ header {
       -o-transition: all .3s linear;
       -webkit-transition: all .3s linear;
       transition: all .3s linear; }
+      @media only screen and (max-width: 1300px) {
+        #subscribe_section > div .socIcons a {
+          font-size: 20px; } }
+      @media only screen and (max-width: 1190px) {
+        #subscribe_section > div .socIcons a {
+          font-size: 15px; } }
+      @media only screen and (max-width: 420px) {
+        #subscribe_section > div .socIcons a {
+          font-size: 12px; } }
     #subscribe_section > div .socIcons a:hover {
       color: #58595b; }
 
@@ -553,18 +700,31 @@ header {
   color: #7c7c7c;
   padding-left: 5%;
   border: none; }
-  @media only screen and (max-width: 1440px) {
+  @media only screen and (max-width: 1650px) {
     #yourMail {
-      width: 57%;
+      width: 411px;
+      right: 24%;
+      font-size: 16px;
+      height: 46px; } }
+  @media only screen and (max-width: 1300px) {
+    #yourMail {
+      width: 60%;
       height: 45px;
       font-size: 18px;
-      left: 17.9%; } }
-  @media only screen and (max-width: 1200px) {
+      left: 18.5%; } }
+  @media only screen and (max-width: 1190px) {
     #yourMail {
-      width: 75%;
-      height: 45px;
-      font-size: 18px;
+      width: 60%;
+      height: 40px;
+      font-size: 16px; } }
+  @media only screen and (max-width: 767px) {
+    #yourMail {
       left: 0; } }
+  @media only screen and (max-width: 420px) {
+    #yourMail {
+      width: 74%;
+      height: 34px;
+      font-size: 11px; } }
 
 #join_btn {
   width: 173px;
@@ -577,42 +737,124 @@ header {
   font-size: 24.11px;
   color: #ffffff;
   background-color: #2b9100; }
-  @media only screen and (max-width: 1440px) {
+  @media only screen and (max-width: 1650px) {
     #join_btn {
-      width: 26%;
+      width: 173px;
+      height: 47px; } }
+  @media only screen and (max-width: 1300px) {
+    #join_btn {
+      width: 145px;
       height: 45px;
-      font-size: 19px;
+      font-size: 18px; } }
+  @media only screen and (max-width: 1190px) {
+    #join_btn {
+      width: 115px;
+      height: 40px;
+      font-size: 16px; } }
+  @media only screen and (max-width: 767px) {
+    #join_btn {
+      right: 13%; } }
+  @media only screen and (max-width: 420px) {
+    #join_btn {
+      width: 82px;
+      height: 34px;
+      font-size: 11px;
       right: 0; } }
-  @media only screen and (max-width: 1200px) {
-    #join_btn {
-      width: 27%;
-      height: 45px;
-      font-size: 19px;
-      right: 0%; } }
 
 #subscribe > h2:nth-child(1) {
   text-align: right; }
 
+@media only screen and (max-width: 767px) {
+  #subscribe > h2:nth-child(1) {
+    text-align: left; } }
 /*...........F O O T E R ...............*/
 footer {
   padding-top: 70px;
-  background: #f7f9fb;
+   /* @media only screen and (max-width: 563px) {
+     padding-left: 5%;
+    
+    }
+    background: #f7f9fb;
+    .textfooterCont{
+      margin-top: 25px;
+      @include fontsStyle($font_1,14px,#626262);
+      line-height: 30px;
+      letter-spacing: 1px;
+
+    }
+
+
+
+    .par_1_row{
+      padding-bottom: 60px;
+    }
+
+
+
+  */
   /* Nav footer*/
   /*instagram footer*/ }
   footer .container {
-    max-width: 1172px; }
-  @media only screen and (max-width: 563px) {
-    footer {
-      padding-left: 5%; } }
-  footer .textfooterCont {
-    margin-top: 25px;
-    font-family: "kariaReguliar";
-    font-size: 14px;
-    color: #626262;
-    line-height: 30px;
-    letter-spacing: 1px; }
-  footer .par_1_row {
+    max-width: 1172px;
     padding-bottom: 60px; }
+    @media only screen and (max-width: 1650px) {
+      footer .container {
+        width: 1124px; } }
+    @media only screen and (max-width: 1300px) {
+      footer .container {
+        width: 967px; } }
+    @media only screen and (max-width: 1190px) {
+      footer .container {
+        width: 750px; } }
+    @media only screen and (max-width: 767px) {
+      footer .container {
+        width: 430px; } }
+    @media only screen and (max-width: 420px) {
+      footer .container {
+        padding-left: 11%; } }
+  @media only screen and (max-width: 1920px) {
+    footer .logoFooter {
+      width: 60%; }
+    footer .textfooterCont {
+      margin-top: 17px;
+      width: 72%; }
+      footer .textfooterCont p {
+        font-family: "kariaReguliar";
+        font-size: 14px;
+        color: #626262;
+        line-height: 28px; } }
+  @media only screen and (max-width: 1300px) {
+    footer .logoFooter {
+      width: 73%; }
+    footer .textfooterCont {
+      margin-top: 15px;
+      width: 100%; }
+      footer .textfooterCont p {
+        font-family: "kariaReguliar";
+        font-size: 14px;
+        color: #626262;
+        line-height: 28px; } }
+  @media only screen and (max-width: 1190px) {
+    footer .logoFooter {
+      width: 79%; }
+    footer .textfooterCont {
+      margin-top: 40px;
+      width: 96%; }
+      footer .textfooterCont p {
+        font-size: 12px;
+        font-family: "kariaReguliar";
+        font-size: 12px;
+        color: #626262;
+        line-height: 25px; } }
+  @media only screen and (max-width: 992px) {
+    footer .logoFooter {
+      width: 15%; }
+    footer .textfooterCont {
+      margin-top: 25px;
+      width: 40%; } }
+  @media only screen and (max-width: 767px) {
+    footer .logoFooter {
+      width: 28%; } }
   footer .style_h3 {
     font-family: "kariaReguliar";
     font-size: 22px;
@@ -620,7 +862,12 @@ footer {
     padding: .5rem 1rem;
     text-transform: uppercase;
     letter-spacing: 2px;
-    padding-left: 0; }
+    padding-left: 0;
+    padding-top: 40px; }
+    @media only screen and (max-width: 1190px) {
+      footer .style_h3 {
+        font-size: 16px;
+        padding-top: 35px; } }
   footer .nav_cotent_footer {
     grid-template-columns: auto auto auto; }
     @media only screen and (max-width: 563px) {
@@ -635,6 +882,11 @@ footer {
       padding-left: 0.1rem; }
       footer .nav_cotent_footer ul > li > a:hover {
         color: #58595b; }
+      @media only screen and (max-width: 1190px) {
+        footer .nav_cotent_footer ul > li > a {
+          font-size: 14px;
+          padding-bottom: 0.5rem;
+          padding-top: 0.5rem; } }
   footer #instagram_block h3:nth-child(3) {
     margin-top: 63px;
     text-align: right;
@@ -670,14 +922,35 @@ footer {
     text-decoration: none; }
     #bottom_footer_block p a:hover {
       color: #2c9146; }
+    @media only screen and (max-width: 1190px) {
+      #bottom_footer_block p a {
+        font-size: 14px; } }
+    @media only screen and (max-width: 420px) {
+      #bottom_footer_block p a {
+        font-size: 10px; } }
+  @media only screen and (max-width: 420px) {
+    #bottom_footer_block p span {
+      font-size: 10px; } }
   #bottom_footer_block p > span {
     margin: 0 2%; }
 
+@media only screen and (max-width: 1300px) {
+  #last_text_footer {
+    font-size: 13.4px; } }
+@media only screen and (max-width: 1190px) {
+  #last_text_footer {
+    font-size: 11px; } }
+@media only screen and (max-width: 420px) {
+  #last_text_footer {
+    font-size: 9px; } }
 /*  bank pay carts*/
 #bankCarts {
   padding-left: 8.51vw;
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto; }
+  @media only screen and (max-width: 767px) {
+    #bankCarts {
+      padding-left: 4%; } }
   #bankCarts a {
     font-family: "kariaReguliar";
     font-size: 2rem;
@@ -688,5 +961,11 @@ footer {
     text-align: right; }
     #bankCarts a:hover {
       color: #2b9100; }
+    @media only screen and (max-width: 1190px) {
+      #bankCarts a {
+        font-size: 1.5rem; } }
+    @media only screen and (max-width: 767px) {
+      #bankCarts a {
+        text-align: left; } }
 
 /*# sourceMappingURL=style.css.map */
